# intania-shop-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  docker-compose.yml  openapi.yaml  rustfmt.toml
.github/workflows/: ci.yml
migrations/0001_init/: down.sql  up.sql
migrations/0002_users_google_fields/: down.sql  up.sql
migrations/0003_update_products_schema/: down.sql  up.sql
migrations/2025-11-01-143138_remove_google_fields/: down.sql  up.sql
migrations/2025-11-03-092448-0000_add_product_fields/: down.sql  up.sql
scripts/: pre-commit-rust.sh  setup-dev.bat  setup-dev.sh
src/: main.rs  schema.rs
src/api/: mod.rs  response.rs
src/api/errors/: mod.rs
src/api/fairings/: cors.rs
src/api/guards/: guard.rs
src/api/handlers/: cart.rs  favorite.rs  mod.rs  products.rs  upload.rs  users.rs
src/api/handlers/cart/: handler.rs
src/api/handlers/favorite/: handler.rs
src/api/handlers/product/: handler.rs  response.rs
src/api/handlers/user/: handler.rs
src/config/: config.rs  mod.rs
src/core/: mod.rs
src/core/cart/: diesel.rs  entity.rs  repository.rs  service.rs
src/core/favorite/: diesel.rs  entity.rs  mod.rs  repository.rs  service.rs
src/core/product/: diesel.rs  entity.rs  mod.rs  repository.rs  service.rs
src/core/user/: diesel.rs  entity.rs  mod.rs  repository.rs  service.rs
src/utils/: db.rs  errors.rs  mod.rs  response.rs  storage.rs
