[package]
name = "intania-shop-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.7"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "numeric"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "auth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
base64 = "0.21"
axum-test = "14.0"

[profile.release]
codegen-units = 1
lto = true
