[package]
name = "intania-shop-api"
version = "0.1.0"
edition = "2024"
description = "A Rust-based e-commerce API for the Intania Shop project"
license = "MIT"
repository = "https://github.com/your-org/intania-shop-api"
readme = "README.md"
keywords = ["api", "e-commerce", "rust", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.7", features = ["multipart"] }
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2", features = ["postgres", "chrono", "r2d2", "numeric"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
dotenvy = "0.15"
jsonwebtoken = "9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "auth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
google-cloud-storage = "1.2.0"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
mime_guess = "2.0"
futures = "0.3"

[dev-dependencies]
mockito = "1.2"
tokio-test = "0.4"
base64 = "0.21"
axum-test = "14.0"

[profile.release]
codegen-units = 1
lto = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "allow"
indexing_slicing = "allow"
multiple_crate_versions = "allow"
field_reassign_with_default = "allow"
module_inception = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
unused_self = "allow"
wildcard_imports = "allow"
manual_let_else = "allow"
struct_field_names = "allow"
unused_async = "allow"
uninlined_format_args = "allow"
